# tsn-granular

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tsara-granular.jucer  tsn_granular.jucer
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/tsara-granular.xcodeproj/: project.pbxproj
Builds/MacOSX/tsara-granular.xcodeproj/project.xcworkspace/xcuserdata/nicholassolem.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/tsara-granular.xcodeproj/xcuserdata/nicholassolem.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: Analyzer.cpp  Analyzer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Settings.h  SettingsWindow.h  ThreadedAnalyzer.cpp  ThreadedAnalyzer.h  TimbreAnalysis.cpp  TimbreAnalysis.h  TimbreSpaceComponent.h  TsaraGranularSynth.cpp  TsaraGranularSynth.h  TsnGranularPluginEditor.cpp  TsnGranularPluginEditor.h  TsnGranularPluginProcessor.cpp  TsnGranularPluginProcessor.h
Source/Analysis/: Analyzer.cpp  Analyzer.h  EssentiaSetup.h  RunLoopStatus.h  Settings.cpp  Settings.h  Statistics.h  ThreadedAnalyzer.cpp  ThreadedAnalyzer.h
Source/Analysis/OnsetAnalysis/: OnsetAnalysis.cpp  OnsetAnalysis.h
Source/Analysis/TimbreAnalysis/: TimbreAnalysis.cpp  TimbreAnalysis.h
Source/Gui/: LAF.cpp  LAF.h  MainParamsComponent.h  NavLFOPage.cpp  NavLFOPage.h  NonAutomatableTitledSlider.h  OnsetSettingsComponent.cpp  OnsetSettingsComponent.h  SettingsWindow.cpp  SettingsWindow.h  TimbreSpaceComponent.cpp  TimbreSpaceComponent.h  TimbreSpaceSettingsComponent.cpp  TimbreSpaceSettingsComponent.h
Source/Navigation/: LFO.cpp  LFO.h
Source/Synthesis/: JuceTsaraGranularSynthesizer.cpp  JuceTsaraGranularSynthesizer.h  JuceTsnGranularSynthesizer.cpp  JuceTsnGranularSynthesizer.h  TSNGranularSynthesizer.cpp  TSNGranularSynthesizer.h  TSNPolyGrain.cpp  TSNPolyGrain.h  TsaraGranularSynth.cpp  TsaraGranularSynth.h  TsnGranularSynth.cpp  TsnGranularSynth.h
Source/TimbreSpace/: TimbreSpace.cpp  TimbreSpace.h  TimbreSpaceHolder.cpp  TimbreSpaceHolder.h  TimbreSpaceTriangulation.cpp  TimbreSpaceTriangulation.h
plugin/: CMakeLists.txt  tsn_granular.jucer
plugin/Source/: TsnGranularPluginEditor.cpp  TsnGranularPluginEditor.h  TsnGranularPluginProcessor.cpp  TsnGranularPluginProcessor.h
plugin/Source/Analysis/: AnalysisUsing.h  Analyzer.cpp  Analyzer.h  EssentiaSetup.h  FeatureOperations.h  Features.h  RunLoopStatus.h  Settings.cpp  Settings.h  Statistics.h  StatisticsOperations.h  ThreadedAnalyzer.cpp  ThreadedAnalyzer.h
plugin/Source/Analysis/OnsetAnalysis/: OnsetAnalysis.cpp  OnsetAnalysis.h  OnsetAnalysisResult.h  OnsetProcessing.cpp  OnsetProcessing.h
plugin/Source/Analysis/TimbreAnalysis/: TimbreAnalysis.cpp  TimbreAnalysis.h  TimbreAnalysisResult.h
plugin/Source/Gui/: AttachedRangedSlider.cpp  AttachedRangedSlider.h  LAF.cpp  LAF.h  NavLFOPage.cpp  NavLFOPage.h  NavigatorPage.cpp  NavigatorPage.h  NonAutomatableTitledSlider.h  ProgressIndicator.cpp  ProgressIndicator.h  SegmentedWaveformComponent.cpp  SegmentedWaveformComponent.h  SettingsWindow.cpp  SettingsWindow.h  TimbreSpaceComponent.cpp  TimbreSpaceComponent.h  TimbreSpaceSettingsComponent.cpp  TimbreSpaceSettingsComponent.h
plugin/Source/Navigation/: LFO.cpp  LFO.h  NavigationManager.h  Navigator.h  Navigator.tpp
plugin/Source/Synthesis/: ResoLowpass.cpp  ResoLowpass.h  TSNGranularSynthesizer.cpp  TSNGranularSynthesizer.h  TSNPolyGrain.cpp  TSNPolyGrain.h
plugin/Source/TimbreSpace/: IndexTypes.h  StringHelpers.cpp  StringHelpers.h  TimbrePointTypes.cpp  TimbrePointTypes.h  TimbreSpace.cpp  TimbreSpace.h  TimbreSpacePointSelector.cpp  TimbreSpacePointSelector.h  TimbreSpaceTriangulation.cpp  TimbreSpaceTriangulation.h  TrianglePoints.cpp  TrianglePoints.h
profiling/: CMakeLists.txt  profile_triangulation.cpp  test_triangle_walk.cpp
